# SALib

./: .checkignore  .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CHANGES.rst  CITATION.cff  CITATIONS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.MD  LICENSE.md  LICENSE.txt  MANIFEST.in  README-advanced.md  README.md  README.rst  _config.yml  environment.yml  esme.py  esme_param.txt  fast-example.py  index.html  index.md  main.py  model_input_groups.txt  model_output_groups.txt  morris-example.py  params.json  pyproject.toml  python-example.py  requirements.txt  runit.sh  (+9 more)
.github/workflows/: lint.yml  python-package-conda.yml  release.yaml  test-pypi-publish.yml  test.yml  update-changelog.yml
SALib/: __init__.py  _version.py  esme.py  esme_param.txt  mylib.py  optimal_trajectories.ipynb  optimal_trajectories.py  pl_esme.py  profiler.py
SALib/analyze/: __init__.py  __main__.py  common_args.py  delta.py  dgsm.py  extended_fast.py  fast.py  ff.py  morris.py  rbd_fast.py  sobol.py  sobol_rbf.py
SALib/plotting/: morris.py
SALib/sample/: __init__.py  __main__.py  common_args.py  directions.py  fast_sampler.py  ff.py  finite_diff.py  joe-kuo-6.21000.txt  latin.py  morris.py  morris_ee.py  morris_groups.py  morris_oat.py  morris_optimal.py  morris_util.py  normal.py  optimal_trajectories.py  saltelli.py  sample.py  sobol.py  sobol_lib.py  sobol_sequence.py  uniform.py
SALib/sample/morris/: __init__.py  brute.py  gurobi.py  local.py  strategy.py
SALib/sample/morris_strategies/: __init__.py  brute.py  gurobi.py  local.py
SALib/scripts/: salib.py
SALib/test_functions/: Ishigami.py  Sobol_G.py  __init__.py
SALib/test_functions/groups/: Ishigami.txt
SALib/test_functions/params/: Ishigami.txt  Ishigami_groups.txt  Sobol_G.txt
SALib/tests/: test_analyze_morris.py  test_esme.py  test_ff.py  test_morris.py  test_morris_groups.py  test_morris_optimal.py  test_morris_util.py  test_optimal_trajectories.py  test_params.txt  test_plotting.py  test_regression.py  test_sobol.py  test_test_functions.py  test_util.py
SALib/util/: __init__.py  morris_trajectories.py  results.py
docs/: Makefile  advanced.rst  api.rst  basics.rst  basics_with_interface.rst  changelog.md  citations.rst  conf.py  developers_guide.md  faq.rst  getting-started.rst  index.rst  license.rst  release_guide.md  requirements.txt
docs/_static/: version_switcher.json
docs/user_guide/: advanced.rst  basics.rst  basics_with_interface.rst  faq.rst  getting-started.rst  wrappers.rst
examples/: radial_example.py  shell-example-analyze.sh
examples/Problem/: multi_output.py  problem_spec.py
examples/data/: case1_input.txt  case1_output.txt  case2_input.txt  case2_output.txt  case3_output.txt  case4_input.txt  case4_output.txt  case5_input.txt  case5_output.txt  model_input.txt  model_output.txt
examples/delta/: delta.bat  delta.py  delta.sh
examples/delta_mwe/: delta_mwe.py
examples/dgsm/: dgsm.bat  dgsm.py  dgsm.sh
examples/enhanced_hdmr/: enhanced_hdmr.bat  enhanced_hdmr.py  enhanced_hdmr.sh
examples/fast/: fast.bat  fast.py  fast.sh  model_output.txt
examples/ff/: ff.bat  ff.py  ff.sh
examples/hdmr/: hdmr.bat  hdmr.py  hdmr.sh
examples/hdmr/case1/: case1.bat  case1.py  case1.sh
examples/hdmr/case2/: case2.bat  case2.py  case2.sh
examples/hdmr/case3/: case3.bat  case3.py  case3.sh
examples/hdmr/case4/: case4.bat  case4.py  case4.sh
examples/hdmr/case5/: case5.bat  case5.py  case5.sh
examples/morris/: model_input.txt  model_output.txt  morris.bat  morris.py  morris.sh  morris_groups.py  morris_optimal.py
examples/notebooks/: cholesky_correlation_sampling.ipynb  composite_distributions_examples.ipynb  shapley_effects.ipynb  sobol_for_correlated_problems.ipynb
examples/pawn/: pawn.bat  pawn.py  pawn.sh
examples/plotting/: plotting.py
examples/radial/: radial_eg2.py  radial_example.py
examples/rbd_fast/: rbd_fast.bat  rbd_fast.py  rbd_fast.sh
examples/sobol/: model_output.txt  sobol.bat  sobol.py  sobol.sh
examples/sobol_rbf/: sobol_rbf.py  sobol_rbf.sh
paper/: codemeta.json  paper.bib  paper.md
src/SALib/: __init__.py
src/SALib/analyze/: common_args.py  delta.py  dgsm.py  discrepancy.py  enhanced_hdmr.py  fast.py  ff.py  hdmr.py  morris.py  pawn.py  radial_ee.py  radial_st.py  rbd_fast.py  rsa.py  shapley.py  sobol.py  sobol_corr.py  sobol_jansen.py
src/SALib/plotting/: bar.py  hdmr.py  heatmap.py  morris.py
src/SALib/sample/: _util.py  common_args.py  directions.py  fast_sampler.py  ff.py  finite_diff.py  latin.py  radial.py  saltelli.py  shapley.py  sobol.py  sobol_corr.py  sobol_sequence.py
src/SALib/sample/morris/: __init__.py  brute.py  gurobi.py  local.py  morris.py  repeatedsampling.py  strategy.py
src/SALib/sample/radial/: __init__.py  radial_funcs.py  radial_mc.py  (+1 more)
src/SALib/scripts/: salib.bat  salib.py
src/SALib/test_functions/: Ishigami.py  Sobol_G.py  __init__.py  lake_problem.py  linear_model_1.py  linear_model_2.py  oakley2004.py
src/SALib/util/: __init__.py  distrs.py  problem.py  results.py  util_funcs.py
test/: test_pass.py
tests/: conftest.py  test_analyze_delta.py  test_analyze_fast.py  test_analyze_morris.py  test_analyze_pawn.py  test_cli.py  test_cli_analyze.py  test_cli_sample.py  test_discrepancy.py  test_ff.py  test_funtions_with_NAN.py  test_groups.py  test_hdmr.py  test_morris.py  test_morris_strategies.py  test_morris_util.py  test_optimal_trajectories.py  test_pawn.py  test_plotting.py  test_problem_spec.py  test_ptqdm_fix.py  test_regression.py  test_sample_seed.py  test_shapley.py  test_sobol.py  test_sobol_corr.py  test_sp_sobol.py  test_test_functions.py  test_to_df.py  test_util.py  travis_install.sh  utils.py
tests/data/: delta_svm_regression_data.csv  model_input.txt  model_output.txt  test.txt
tests/sample/: test_latin.py
tests/sample/morris/: test_gurobi.py  test_morris.py  test_morris_strategies.py
tests/sample/radial/: test_radial_oat.py  test_radial_sobol.py  test_setup.py
(+4 files in other folders)
