[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SALib"
dynamic = ["version"]
description = "Tools for sensitivity analysis. Contains Sobol', Morris, and FAST methods"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Jon Herman", email = "jdherman8@gmail.com" },
  { name = "Will Usher" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.20.3",
  "scipy>=1.7.3",
  "matplotlib>=3.2.2",
  "pandas>=1.1.2",
  "pathos>=0.2.5",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

doc = [
    "sphinx",
    "myst_parser",
    "numpydoc"
]

dev = [
    "SALib[test]",
    "SALib[doc]",
    "pre-commit",
    "hatch",
]

[project.scripts]
salib = "SALib.scripts.salib:main"

[project.urls]
Documentation = "https://salib.readthedocs.io"
"Source code" = "https://github.com/SALib/SALib"

[tool.hatch]
version.path = "src/SALib/__init__.py"
build.targets.sdist.exclude = [
  ".github",
  "docs",
  "examples",
  "paper",
  "*.md",
  "*.rst",
  "*.yml",
  "*.cff",
  ".*",
]

[tool.pytest.ini_options]
addopts = "--durations 10"
testpaths = [
    "tests",
]
